Loose ends and Bug fixes