@@ -17,9 +17,9 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class JwtFilter extends OncePerRequestFilter {
@@ -54,25 +54,37 @@ public class JwtFilter extends OncePerRequestFilter {
                 Claims claims = jwtUtils.getClaimsFromToken(token);
                 String username = claims.getSubject();
                 logger.info("Authenticated request for user: {}", username);
+
                 UserDetails userDetails = userDetailsService.loadUserByUsername(username);
+                logger.debug("User details loaded: {}", userDetails);
 
                 @SuppressWarnings("unchecked")
-                List<String> roles = (List<String>) claims.get("roles");
-                Collection<GrantedAuthority> authorities = roles != null
-                        ? roles.stream()
-                            .map(SimpleGrantedAuthority::new)
-                            .map(GrantedAuthority.class::cast) 
-                            .toList()
-                        : new ArrayList<>(userDetails.getAuthorities());
+                List<String> rolesFromClaims = (List<String>) claims.get("roles");
+
+                List<String> filteredRoles = rolesFromClaims != null
+                        ? rolesFromClaims.stream()
+                            .filter(role -> role.startsWith("ROLE_"))
+                            .collect(Collectors.toList())
+                        : userDetails.getAuthorities().stream()
+                            .map(GrantedAuthority::getAuthority)
+                            .collect(Collectors.toList());
+
+                logger.debug("Roles from JWT claims={} filtered roles={}", rolesFromClaims, filteredRoles);
+
+                Collection<GrantedAuthority> authorities = filteredRoles.stream()
+                        .map(SimpleGrantedAuthority::new)
+                        .collect(Collectors.toList());
 
                 UsernamePasswordAuthenticationToken authentication =
                         new UsernamePasswordAuthenticationToken(userDetails, null, authorities);
+
                 SecurityContextHolder.getContext().setAuthentication(authentication);
+                logger.debug("Authentication set in SecurityContext: {}", SecurityContextHolder.getContext().getAuthentication());
             } else {
                 logger.debug("No valid JWT token found for request {}", request.getRequestURI());
             }
         } catch (Exception ex) {
-            logger.error("Cannot set user authentication: {}", ex.getMessage());
+            logger.error("Cannot set user authentication: {}", ex.getMessage(), ex);
         }
 
         filterChain.doFilter(request, response);
